# sinch-messaging-sdk

./: .gitignore  README.md  openapi.yaml  pyproject.toml
example/: basic_usage.py  main.py
src/sinch_messaging/: __init__.py  exceptions.py  http.py  models.py  sinch_client.py
src/sinch_messaging/resources/: __init__.py  messages.py  payload_builders.py
tests/: test_exceptions.py  test_messages.py  test_pagination.py  test_public_api.py
tests/integration/: test_message_integration.py
tests/unit/: test_client.py  test_http.py  test_messages.py  test_models.py  test_sdk_smoke.py
